Extracted string resources.
Added Landscape layouts for unique HomePage and StatKeeper pages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,29 @@
     <string name="title_menu3">Add/Update Player</string>
     <string name="title_menu4">History &amp; Reports</string>
     <string name="matthew_stafford">MATTHEW STAFFORD</string>
+    <string name="quarterback">Quarterback</string>
+    <string name="detroit_lions">Detroit Lions</string>
+    <string name="blank_4space" />
+    <string name="scoreboard_4eights">8888</string>
+    <string name="interceptions">INTERCEPTIONS</string>
+    <string name="fumbles">FUMBLES</string>
+    <string name="rush_attempts">RUSH ATTEMPTS</string>
+    <string name="pass_complete">PASS COMPLETE</string>
+    <string name="pass_attempts">PASS ATTEMPTS</string>
+    <string name="touchdowns">TOUCHDOWNS</string>
+    <string name="recving_yards">RECVING YARDS</string>
+    <string name="rushing_yards">RUSHING YARDS</string>
+    <string name="passing_yards">PASSING YARDS</string>
+    <string name="player_statistics">PLAYER STATISTICS</string>
+    <string name="modify_player_roster">Modify Player Roster</string>
+    <string name="coming_soon">Coming Soon</string>
+    <string name="passing_yards_submit">PASSING YARDS:</string>
+    <string name="scoreboard_3eights">888</string>
+    <string name="submit_yards">submit yards</string>
+    <string name="rushing_yards_submit">RUSHING YARDS:</string>
+    <string name="recving_yards_submit">RECVING YARDS:</string>
+    <string name="touchdown">TOUCHDOWN</string>
+    <string name="incomplete">INCOMPLETE</string>
+    <string name="fumble">FUMBLE</string>
+    <string name="interception">INTERCEPTION</string>
 </resources>
