--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">FavoriteAthleteStatTracker</string>
     <string name="title_menu1">Active Player</string>
-    <string name="title_menu2">Scoring Dashboard</string>
-    <string name="title_menu3">Add/Update Player</string>
-    <string name="title_menu4">History &amp; Reports</string>
+    <string name="title_menu2">Player Stats</string>
+    <string name="title_menu3">Game Score</string>
+    <string name="title_menu4">Player Roster</string>
+    <string name="title_menu5">History &amp; Reports</string>
     <string name="matthew_stafford">MATTHEW STAFFORD</string>
     <string name="quarterback">Quarterback</string>
     <string name="detroit_lions">Detroit Lions</string>
